crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__closure__close_over_later_variable.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/close_over_later_variable.lox
---
success: true
exit_code: 0
----- stdout -----
b
a

----- stderr -----
