crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__closure__close_over_method_parameter.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/close_over_method_parameter.lox
---
success: true
exit_code: 0
----- stdout -----
param

----- stderr -----
