crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__closure__open_closure_in_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/open_closure_in_function.lox
---
success: true
exit_code: 0
----- stdout -----
local

----- stderr -----
