crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__closure__reuse_closure_slot.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/reuse_closure_slot.lox
---
success: true
exit_code: 0
----- stdout -----
a

----- stderr -----
