crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__closure__unused_closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/unused_closure.lox
---
success: true
exit_code: 0
----- stdout -----
ok

----- stderr -----
